--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
-    background-color: #5f45bb;
-    background-image: linear-gradient(to bottom right, #180cac, #3e1f70);
+    background-color: rgb(69, 124, 187);
+    background-image: linear-gradient(to bottom right, #180cac, #1f4570);
     color: #fff;
     font-family: "Quicksand", sans-serif;
     font-size: 16px;
@@ -52,7 +52,7 @@ a {
     background-color: #fff;
     border-radius: 290486px;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-    color: #3e1f70;
+    color: #1f3f70;
     display: inline-block;
     font-size: 0.875rem;
     line-height: 1;
